fixed top align, nav selection

--- a/src/sass/elements/_nav.scss
+++ b/src/sass/elements/_nav.scss
@@ -24,6 +24,9 @@ nav {
             &:hover {
                 opacity: 0.7;
             }
+            &.selected {
+                font-weight: bold;
+            }
         }
     }
 }
